--- a/index.html
+++ b/index.html
@@ -105,44 +105,40 @@
         </nav>
     </div>
 </header>
+<!-- End Header -->
 
 
-    <!-- Hero -->
-    <section class="hero bg-grey py-12 lg:pt-12 lg:pb-0 overflow-hidden">
-        <div class="container mx-auto h-full">
-          <div class="flex flex-col lg:flex-row items-center justify-between h-full">
+<!-- Hero -->
+<section class="hero bg-grey py-12 lg:py-12 lg:pb-0 overflow-hidden">
+    <div class="container mx-auto h-full">
+        <div class="flex flex-col lg:flex-row items-center justify-between h-full">
             
-            <!-- Teks -->
-            <div class="hero__teks lg:w-[48%] text-center lg:text-left">
-              <!-- Badge -->
-              <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 mb-[26px] rounded-full mx-auto lg:mx-0">
+        <!-- Teks -->
+        <div class="hero__teks lg:w-[48%] text-center lg:text-left">
+            <!-- Badge -->
+            <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 mb-[26px] rounded-full mx-auto lg:mx-0">
                 <i class="ri-brain-line text-2xl text-accent"></i>
-                <div class="uppercase text-base font-medium text-[#9ab4b7] tracking-[2.24px]">Live your life</div>
-              </div>
-              <h1 class="h1 mb-6">Judul Besar</h1>
-              <p class="mb-[42px] md:max-w-lg">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error et
-                non adipisci similique perferendis. Ipsam voluptatibus error
-                provident laborum, reiciendis necessitatibus, dignissimos dolorem
-                molestiae cum ipsum culpa, fugiat vitae! Tenetur.
-              </p>
-              <button class="btn btn-lg btn-accent mx-auto lg:mx-0">Expolre Now</button>
+                <div class="uppercase text-base font-medium text-[#9ab4b7] tracking-[2.24px]">Discover Every Detail</div>
             </div>
-  
-            <!-- Gambar -->
-            <div class="hero__img hidden lg:flex max-w-[814px] self-end">
-              <img src="assets/img/hero/img.png" alt="" />
-            </div>
-          </div>
+              <h1 class="h1 mb-6">Eksplorasi Anatomi Tubuh Manusia</h1>
+              <p class="mb-[42px] md:max-w-lg">Jelajahi anatomi manusia dengan pendekatan menyeluruh, menggabungkan visual yang memukau dan informasi yang jelas untuk mendalami setiap bagian tubuh secara efisien.</p>
+              <button class="btn btn-lg btn-accent mx-auto lg:mx-0">Eksplore sekarang</button>
         </div>
-      </section>
-      <!-- End Hero -->
   
-      <!-- Stats -->
-      <section class="stats section">
-        <div class="container mx-auto">
-          <!-- Wrapper -->
-          <div class="flex flex-col lg:flex-row gap-y-6 justify-between">
+        <!-- Gambar -->
+        <div class="hero__img hidden lg:flex max-w-[814px] self-end">
+            <img src="assets/img/hero/img.png" alt="" />
+        </div>
+        </div>
+    </div>
+</section>
+<!-- End Hero -->
+  
+<!-- Stats -->
+<section class="stats section">
+    <div class="container mx-auto">
+        <!-- Wrapper -->
+        <div class="flex flex-col lg:flex-row gap-y-6 justify-between">
             <!-- Item 1 -->
             <div class="stats__item flex-1 border-r flex flex-col items-center">
               <div class="text-4xl lg:text-[64px] font-semibold text-accent-tertiery lg:mb-2">+1000</div>
@@ -158,35 +154,35 @@
               <div class="text-4xl lg:text-[64px] font-semibold text-accent-tertiery lg:mb-2">+10</div>
               <div>Ahli</div>
             </div>
-          </div>
         </div>
-      </section>
-      <!-- End Stats -->
+    </div>
+</section>
+<!-- End Stats -->
   
-      <!-- Services -->
-      <section class="services">
-        <!-- Background -->
-        <div class="bg-services bg-cover bg-no-repeat max-w-[1466px] mx-4 lg:mx-auto rounded-[20px] lg:pt-[70px] px-6 lg:px-0 relative h-[368px] flex items-center lg:items-start -z-10">
-          <div class="container mx-auto">
+<!-- Services -->
+<section class="services">
+    <!-- Background -->
+     <div class="bg-services bg-cover bg-no-repeat max-w-[1466px] mx-4 lg:mx-auto rounded-[20px] lg:pt-[70px] px-6 lg:px-0 relative h-[368px] flex items-center lg:items-start -z-10">
+        <div class="container mx-auto">
             <!-- Teks -->
             <div class="services__top flex items-center flex-col lg:flex-row lg:mb-[60px]">
               <h2 class="h2 text-white flex-1 mb-4 lg:mb-0 text-center lg:text-left">Services</h2>
               <p class="text-white flex-1 text-center lg:text-left max-w-2xl lg:max-w-none">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi magnam nisi doloribus tenetur voluptate libero in animi, sapiente unde, aspernatur officia.</p>
             </div>
-          </div>
         </div>
-        <!-- Card Container -->
-        <div class="container mx-auto mt-8 lg:-mt-[144px]">
-          <!-- Card -->
-          <div class="grid xl:grid-cols-3 gap-5 px-8 xl:px-0">
+    </div>
+    <!-- Card Container -->
+    <div class="container mx-auto mt-8 lg:-mt-[144px]">
+        <!-- Card -->
+         <div class="grid xl:grid-cols-3 gap-5 px-8 xl:px-0">
             <!-- Card Item 1 -->
-            <div class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] flex flex-col items-center text-center">
-              <!-- Card Item Icon -->
-              <div class="mb-[15px]">
-                <img src="assets/icons/services/icon-1.svg" alt="" />
-              </div>
-              <h3 class="h3 mb-[10px]">Title 1</h3>
-              <p class="font-light leading-normal max-w-[300px]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, culpa?</p>
+             <div class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] flex flex-col items-center text-center">
+                <!-- Card Item Icon -->
+                 <div class="mb-[15px]">
+                    <img src="assets/icons/services/icon-1.svg" alt="" />
+                </div>
+                <h3 class="h3 mb-[10px]">Title 1</h3>
+                <p class="font-light leading-normal max-w-[300px]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, culpa?</p>
             </div>
             <!-- Card Item 2 -->
             <div class="services__item bg-white p-[30px] rounded-[10px] shadow custom2 min-h-[288px] flex flex-col items-center text-center">
@@ -208,9 +204,9 @@
               </p>
             </div>
           </div>
-        </div>
-      </section>
-      <!-- End Services -->
+    </div>
+</section>
+<!-- End Services -->
 
 <script src="js/main.js"></script>
 <script src="js/swiper-bundle.min.js"></script>
