--- a/index.html
+++ b/index.html
@@ -206,7 +206,57 @@
           </div>
     </div>
 </section>
+
 <!-- End Services -->
+     <!-- What's Special -->
+<section class="py-12 px-6 md:px-20">
+    <h2 class="text-2xl md:text-4xl font-bold text-center font-roboto mb-8 md:mb-12">Apa Yang Membuat <span class="text-gradient">Eduhealth</span> Spesial?</h2>
+    <!-- Teks Gambar 1 -->
+    <div class="relative flex flex-col md:flex-row items-center mb-10">
+      <!-- Text Section -->
+      <div class="w-full md:w-2/3 text-center md:text-left md:mb-0">
+        <p class="text-lg font-bold text-birutua font-roboto mb-2">Visualisasi Realistis</p>
+        <div class="text-xl tracking-[.12em] md:text-3xl font-bold font-roboto tracking-[.05em] mb-2">
+          <h3>Nikmati visualisasi anatomi dengan kualitas gambar yang tinggi!</h3>
+        </div>
+        <p class="text-lg font-inter max-w-md mx-auto md:mx-0">Detail yang akurat, setiap bagian tubuh ditampilkan dengan jelas untuk memberikan pengalaman belajar yang mendalam.</p>
+      </div>
+      <!-- Image Section -->
+      <div class="hidden md:block w-full md:w-1/3">
+        <img src="assets/img/special/sp1.png" alt="gambar-tg1" class="w-full h-auto" />
+      </div>
+    </div>
+    <!-- Teks Gambar 2 -->
+    <div class="relative flex flex-col md:flex-row items-center mb-10">
+      <!-- Image Section -->
+      <div class="hidden md:block w-full md:w-1/3">
+        <img src="assets/img/special/sp2.png" alt="gambar-tg2" class="w-full h-auto" />
+      </div>
+      <!-- Text Section -->
+      <div class="w-full md:w-2/3 text-center md:text-left md:mb-0 md:ml-10">
+        <p class="text-lg font-bold text-birutua font-roboto mb-2">Akses Mudah</p>
+        <div class="text-xl tracking-[.12em] md:text-3xl font-bold font-roboto tracking-[.05em] mb-2">
+          <h3>Pelajari anatomi kapan saja dan di mana saja!</h3>
+        </div>
+        <p class="text-lg font-inter max-w-md mx-auto md:mx-0">Situs kami dapat diakses melalui berbagai perangkat, memungkinkan Anda untuk belajar sesuai dengan kenyamanan Anda.</p>
+      </div>
+    </div>
+    <!-- Teks Gambar 3 -->
+    <div class="relative flex flex-col md:flex-row items-center mb-8 md:mb-20">
+      <!-- Text Section -->
+      <div class="w-full md:w-2/3 text-center md:text-left md:mb-0">
+        <p class="text-lg font-bold text-birutua font-roboto mb-2">Konten Terupdate</p>
+        <div class="text-xl tracking-[.12em] md:text-3xl font-bold font-roboto tracking-[.05em] mb-2">
+          <h3>Konten yang selalu diperbarui berdasarkan penelitian terbaru!</h3>
+        </div>
+        <p class="text-lg font-inter max-w-md mx-auto md:mx-0">Kami memastikan Anda mendapatkan informasi yang paling akurat dan terkini.</p>
+      </div>
+      <!-- Image Section -->
+      <div class="hidden md:block w-full md:w-1/3">
+        <img src="assets/img/special/sp3.png" alt="gambar-tg3" class="w-full h-auto" />
+      </div>
+    </div>
+  </section>
 
 <script src="js/main.js"></script>
 <script src="js/swiper-bundle.min.js"></script>
