--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   
         <!-- Gambar 3D -->
         <div class="flex justify-center lg:col-span-1">
-            <model-viewer src="assets/blend/organmanusia.glb" alt="3D Model" auto-rotate camera-controls style="height: 600px; width: 600px;" ></model-viewer>
+            <model-viewer src="assets/blend/hero/organmanusia.glb" alt="3D Model" auto-rotate camera-controls style="height: 600px; width: 600px;" ></model-viewer>
         </div>
         </div>
     </div>
@@ -200,7 +200,7 @@
              <div class="sorotan__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] flex flex-col items-center text-center">
                 <!-- Card Item Icon -->
                  <div class="mb-[15px]">
-                    <img src="assets/blend/organ/organ.png" alt="" />
+                    <img src="assets/img/sorotan/organ.png" alt="" />
                 </div>
                 <h3 class="h3 mb-[10px]">Title 1</h3>
                 <p class="font-light leading-normal max-w-[300px]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, culpa?</p>
@@ -209,7 +209,7 @@
             <div class="sorotan__item bg-white p-[30px] rounded-[10px] shadow custom2 min-h-[288px] flex flex-col items-center text-center">
               <!-- Card Item Icon -->
               <div class="mb-[15px]">
-                <img src="assets/blend/organ/sel.png" alt="" />
+                <img src="assets/img/sorotan/sel.png" alt="" />
               </div>
               <h3 class="h3 mb-[10px]">Title 1</h3>
               <p class="font-light leading-normal max-w-[300px]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit,culpa?</p>
@@ -218,7 +218,7 @@
             <div class="sorotan__item bg-white p-[30px] rounded-[10px] shadow custom2 min-h-[288px] flex flex-col items-center text-center">
               <!-- Card Item Icon -->
               <div class="mb-[15px]">
-                <img src="assets/icons/sorotan/icon-3.svg" alt="" />
+                <img src="assets/img/sorotan/" alt="" />
               </div>
               <h3 class="h3 mb-[10px]">Title 1</h3>
               <p class="font-light leading-normal max-w-[300px]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit,culpa?
@@ -230,7 +230,7 @@
 <!-- End Sorotan -->
     
 <!-- Spesial -->
-<section class="special-features bg-white py-16 lg:py-12 lg:mt-20">
+<section class="spesial bg-white py-16 lg:py-12 lg:mt-20">
     <div class="container mx-auto">
       <!-- Judul -->
       <div class="text-center mb-6">
@@ -248,7 +248,7 @@
             </div>
             <!-- 3D Model -->
             <div class="flex justify-center lg:col-span-1">
-                <img src="assets/blend/jantung.png" alt="3D Model" style="height: 400px; width: 400px;" />
+                <img src="assets/img/spesial/jantung.png" alt="3D Model" style="height: 400px; width: 400px;" />
             </div>
             
         </div>
@@ -257,7 +257,7 @@
         <div class="grid bg-white grid-cols-1 lg:grid-cols-3 gap-12 items-center p-6 m-6">
             <!-- 3D Model -->
             <div class="flex justify-center lg:col-span-1 mt-6 lg:mt-0 order-2 lg:order-1">
-                <img src="assets/blend/paru.png" alt="3D Model" style="height: 400px; width: 400px;" />    
+                <img src="assets/img/spesial/paru.png" alt="3D Model" style="height: 400px; width: 400px;" />    
             </div>
             <!-- Teks -->
             <div class="lg:col-span-2 flex flex-col justify-center text-center lg:text-left order-1 lg:order-2">
@@ -279,11 +279,11 @@
             </div>
             <!-- 3D Model -->
             <div class="flex justify-center lg:col-span-1">
-                <img src="assets/blend/liver.png" alt="3D Model" style="height: 400px; width: 400px;" />    
+                <img src="assets/img/spesial/liver.png" alt="3D Model" style="height: 400px; width: 400px;" />    
             </div>
         </div>
     </div>
-  </section>
+</section>
 <!-- End Spesial  -->
   
 <!-- Footer -->
