--- a/kontak.html
+++ b/kontak.html
@@ -20,6 +20,24 @@
 
     <!-- Model Viewer -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
+    <!-- Map -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtca6kc9LlzlNY3D7nfBA2ZQ8_2Gy8Fr4"></script>
+    <script>
+        function initMap() {
+            const kampusSiliwangi = { lat:  -7.354634, lng: 108.228692 };
+            const map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 15,
+                center: kampusSiliwangi,
+            });
+            new google.maps.Marker({
+                position: kampusSiliwangi,
+                map: map,
+                title: "Kampus 2 Universitas Siliwangi",
+            });
+        }
+        window.onload = initMap;
+    </script>
   </head>
   <body id="content">
     <!-- Header -->
@@ -128,131 +146,51 @@
   <!-- Overlay Shadow -->
   <div class="absolute inset-0 bg-black opacity-80"></div>
   <div class="relative text-center text-white">
-    <h1 class="text-4xl md:text-6xl text-white font-bold tracking-widest">TENTANG</h1>
-    <p class="font-light">Tentang Kami</p>
+    <h1 class="text-4xl md:text-6xl text-white font-bold tracking-widest">KONTAK</h1>
+    <p class="font-light">Kontak Kami</p>
   </div>
 </section>
 <!-- End Hero -->
 
-<!-- Apa Itu Eduhealth -->
-<section class="container mx-auto py-16 px-4">
-  <div class="flex flex-col md:flex-row items-center">
-      <!-- Teks -->
-      <div class="md:w-1/2">
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 mb-[26px] rounded-full mx-auto lg:mx-0">
-          <i class="ri-brain-line text-2xl text-accent"></i>
-          <div class="uppercase text-base font-medium text-black tracking-[2.24px]">Eduhealth</div>
-        </div>
-        <h1 class="h1 mb-6">Apa itu <span class="text-accent">Eduhealth?</span></h1>
-        <p class="mb-[30px] md:max-w-lg">Website tentang anatomi tubuh manusia. Untuk mengikuti lomba ICONIC IT 2024 yang diselenggarakan oleh Informatika UNSIL.</p>
-        <p class="md:max-w-lg">Jelajahi anatomi manusia dengan pendekatan menyeluruh, menggabungkan visual yang memukau dan informasi yang jelas untuk mendalami setiap bagian tubuh secara efisien. Website ini menawarkan panduan komprehensif tentang anatomi tubuh manusia, mengungkap detail dari setiap organ dan sistem. Dengan visual interaktif dan deskripsi mendalam, Anda dapat memahami bagaimana tubuh berfungsi secara keseluruhan. Ideal untuk pelajar, profesional kesehatan, atau siapa saja yang ingin mengeksplorasi kompleksitas tubuh manusia dengan cara yang mudah dipahami.</p>
-      </div>
-      <!-- Gambar -->
-      <div class="flex justify-center lg:col-span-1">
-        <model-viewer src="assets/blend/hero/organmanusia.glb" alt="3D-Model" auto-rotate camera-controls style="height: 600px; width: 500px" class="shadow-xl"></model-viewer>
-      </div>
-  </div>
+<!-- Kontak -->
+<section class="flex min-h-screen mt-12 mb-20">
+    <!-- Form -->
+    <div class="flex-1 bg-white shadow-lg rounded-lg p-8 m-4">
+        <h1 class="text-4xl font-bold mb-6">Hubungi Kami</h1>
+        <p class="mb-6">Hubungi kami untuk pertanyaan atau dukungan. Kami siap membantu Anda kapan saja.</p>
+        <a href="https://github.com/" target="_blank" class="flex items-center w-max gap-x-2 mb-2 text-accent hover:text-accent-secondary">
+          <i class="ri-whatsapp-line"></i>
+          <p class="font-light">WhatsApp</p>
+        </a>
+        <a href="https://github.com/" target="_blank" class="flex items-center w-max gap-x-2 mb-6 text-accent hover:text-accent-secondary">
+          <i class="ri-github-fill"></i>
+          <p class="font-light">Github</p>
+        </a>
+        <form action="#" method="POST">
+            <div class="mb-4">
+                <label for="nama" class="block text-lg font-medium text-black">Nama Lengkap <span class="text-accent">*</span></label>
+                <input type="text" id="nama" name="nama" class="mt-1 block w-full px-3 py-2 border border-accent rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-accent-secondary" required>
+            </div>
+            <div class="mb-4">
+                <label for="email" class="block text-lg font-medium text-black">Email <span class="text-accent">*</span></label>
+                <input type="email" id="email" name="email" class="mt-1 block w-full px-3 py-2 border border-accent rounded-md shadowlg focus:outline-none focus:ring-2 focus:ring-accent-secondary" required>
+            </div>
+            <div class="mb-4">
+                <label for="pesan" class="block text-lg font-medium text-black">Pesan <span class="text-accent">*</span></label>
+                <textarea id="pesan" name="pesan" rows="4" class="mt-1 block w-full px-3 py-2 border border-accent rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-accent-secondary" required></textarea>
+            </div>
+            <button type="submit" class="w-full bg-accent hover:bg-accent-secondary text-white font-bold py-2 px-4 rounded-lg">Kirim</button>
+        </form>
+    </div>
+
+    <!-- Map -->
+    <div class="flex-1 bg-gray-200 m-4">
+        <div id="map" class="h-full"></div>
+    </div>
 </section>
-<!-- End Apa itu Eduhealth -->
 
-<!-- Pages dan Sections -->
-<section class="container mx-auto py-16 px-4">
-  <div class="flex flex-col md:flex-row items-center">
-      <!-- Gambar -->
-      <div class="md:w-1/2 mt-8 md:mt-0 md:ml-8">
-        <img src="https://via.placeholder.com/500x300" alt="Gambar Placeholder" class="rounded-lg shadow-lg">
-      </div>
-      <!-- Teks -->
-      <div class="md:w-1/2">
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 mb-[26px] rounded-full mx-auto lg:mx-0">
-          <i class="ri-brain-line text-2xl text-accent"></i>
-          <div class="uppercase text-base font-medium text-black tracking-[2.24px]">Eduhealth</div>
-        </div>
-        <h1 class="h1 mb-6">5 Pages, 20+ Sections Unik</h1>
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 text-3xl">
-          <i class="ri-checkbox-line text-accent"></i>
-          <div class="text-base font-medium text-black">Beranda</div>
-        </div>
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 text-3xl">
-          <i class="ri-checkbox-line text-accent"></i>
-          <div class="text-base font-medium text-black">Definisi</div>
-        </div>
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 text-3xl">
-          <i class="ri-checkbox-line text-accent"></i>
-          <div class="text-base font-medium text-black">Eksplor</div>
-        </div>
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 text-3xl">
-          <i class="ri-checkbox-line text-accent"></i>
-          <div class="text-base font-medium text-black">Tentang</div>
-        </div>
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 text-3xl">
-          <i class="ri-checkbox-line text-accent"></i>
-          <div class="text-base font-medium text-black">Kontak</div>
-        </div>
-      </div>
-  </div>
-</section>
-<!-- End Pages dan Sections -->
-
-<!-- Responsive -->
-<section class="container mx-auto py-16 px-4">
-  <div class="flex flex-col md:flex-row items-center">
-      <!-- Teks -->
-      <div class="md:w-1/2">
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 mb-[26px] rounded-full mx-auto lg:mx-0">
-          <i class="ri-brain-line text-2xl text-accent"></i>
-          <div class="uppercase text-base font-medium text-black tracking-[2.24px]">Eduhealth</div>
-        </div>
-        <i class="ri-smartphone-line text-black text-2xl md:text-5xl"></i>
-        <h1 class="h1 mb-6">Website yang Responsive</h1>
-      </div>
-      <!-- Gambar -->
-      <div class="md:w-1/2 mt-8 md:mt-0 md:ml-8">
-          <img src="https://via.placeholder.com/500x300" alt="Gambar Placeholder" class="rounded-lg shadow-lg">
-      </div>
-  </div>
-</section>
-<!-- End Responsive -->
-
-<!-- Update & Support -->
-<section class="container mx-auto py-16 px-4">
-  <div class="flex flex-col md:flex-row items-center">
-      <!-- Gambar -->
-      <div class="md:w-1/2 mt-8 md:mt-0 md:ml-8">
-        <img src="https://via.placeholder.com/500x300" alt="Gambar Placeholder" class="rounded-lg shadow-lg">
-      </div>
-      <!-- Teks -->
-      <div class="md:w-1/2">
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 mb-[26px] rounded-full mx-auto lg:mx-0">
-          <i class="ri-brain-line text-2xl text-accent"></i>
-          <div class="uppercase text-base font-medium text-black tracking-[2.24px]">Eduhealth</div>
-        </div>
-        <i class="ri-time-line text-black text-2xl md:text-5xl"></i>
-        <h1 class="h1 mb-6">Update & Support</h1>
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 text-3xl">
-          <i class="ri-checkbox-line text-accent"></i>
-          <div class="text-base font-medium text-black">Konten Terbaru</div>
-        </div>
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 text-3xl">
-          <i class="ri-checkbox-line text-accent"></i>
-          <div class="text-base font-medium text-black">Update Definisi</div>
-        </div>
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 text-3xl">
-          <i class="ri-checkbox-line text-accent"></i>
-          <div class="text-base font-medium text-black">Update Gambar dan 3D</div>
-        </div>
-        <div class="flex items-center bg-white py-[10px] px-[20px] w-max gap-x-2 text-3xl">
-          <i class="ri-checkbox-line text-accent"></i>
-          <div class="text-base font-medium text-black">Full Support</div>
-        </div>
-      </div>
-  </div>
-</section>
-<!-- End Update & Support -->
-
-
-    <!-- Footer -->
-    <footer class="bg-white">
+<!-- Footer -->
+<footer class="bg-white">
       <div class="container mx-auto mt-4 px-6 py-8">
         <div class="flex flex-col md:flex-row space-y-8 md:space-y-0 md:space-x-10">
           <!-- Logo dan Deskripsi -->
@@ -303,8 +241,8 @@
         <!-- Copyright -->
         <p class="mt-12 lg:text-center">&copy;2024 EduHealth, Inc. All rights reserved.</p>
       </div>
-    </footer>
-    <!-- End Footer -->
+</footer>
+<!-- End Footer -->
 
     <script src="js/main.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
