--- a/kontak.html
+++ b/kontak.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EduHealth</title>
+    <title>EduHealth - Eksplorasi Anatomi Tubuh Manusia</title>
     <!-- CSS -->
     <link rel="stylesheet" href="dist/output.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -20,24 +20,6 @@
 
     <!-- Model Viewer -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-
-    <!-- Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtca6kc9LlzlNY3D7nfBA2ZQ8_2Gy8Fr4"></script>
-    <script>
-        function initMap() {
-            const kampusSiliwangi = { lat:  -7.354634, lng: 108.228692 };
-            const map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 15,
-                center: kampusSiliwangi,
-            });
-            new google.maps.Marker({
-                position: kampusSiliwangi,
-                map: map,
-                title: "Kampus 2 Universitas Siliwangi",
-            });
-        }
-        window.onload = initMap;
-    </script>
   </head>
   <body id="content">
     <!-- Header -->
@@ -45,7 +27,7 @@
       <div class="container mx-auto lg:relative flex flex-col lg:flex-row lg:justify-between gap-y-4 lg:gap-y-0">
         <!-- Logo -->
         <div class="flex justify-center lg:justify-normal">
-          <a href="#">
+          <a href="index.html">
             <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" />
           </a>
         </div>
@@ -86,145 +68,164 @@
           </div>
           <div class="px-12 flex flex-col gap-y-12 h-full">
             <a href="#">
-              <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" />
+              <img src="./assets/img/header/logo.svg" alt="" />
             </a>
             <ul class="flex flex-col gap-y-5">
               <li>
                 <a href="index.html" class="text-secondary hover:text-accent transition-all duration-300">Beranda</a>
               </li>
               <li>
-                <a href="#" class="text-secondary hover:text-accent transition-all duration-300">Definisi</a>
+                <a href="definisi.html" class="text-secondary hover:text-accent transition-all duration-300">Definisi</a>
               </li>
               <li>
-                <a href="#" class="text-secondary hover:text-accent transition-all duration-300">Eksplor</a>
+                <a href="eksplor.html" class="text-secondary hover:text-accent transition-all duration-300">Eksplor</a>
               </li>
               <li>
                 <a href="tentang.html" class="text-secondary hover:text-accent transition-all duration-300">Tentang</a>
               </li>
               <li>
-                <a href="#" class="text-secondary hover:text-accent transition-all duration-300">Kontak</a>
+                <a href="kontak.html" class="text-secondary hover:text-accent transition-all duration-300">Kontak</a>
               </li>
             </ul>
           </div>
         </nav>
 
         <!-- Desktop Navbar -->
-        <nav id="navbar" class="hidden navbar-default bg-white w-full left-0 shadow-custom1 h-16 rounded-[10px] lg:flex lg:items-center lg:justify-between lg:px-[50px]">
-          <ul class="flex gap-x-4">
-            <li>
-              <a href="index.html" class="border-r pr-4 text-secondary hover:text-accent transition-all duration-300">Beranda</a>
-            </li>
-            <li>
-              <a href="#" class="border-r pr-4 text-secondary hover:text-accent transition-all duration-300">Definisi</a>
-            </li>
-            <li>
-              <a href="#" class="border-r pr-4 text-secondary hover:text-accent transition-all duration-300">Eksplor</a>
-            </li>
-            <li>
-              <a href="tentang.html" class="border-r pr-4 text-secondary hover:text-accent transition-all duration-300">Tentang</a>
-            </li>
-            <li>
-              <a href="#" class="text-secondary hover:text-accent transition-all duration-300">Kontak</a>
-            </li>
-          </ul>
+        <nav id="navbar" class="hidden navbar-default bg-white w-full left-0 right-0 shadow-custom1 h-16 rounded-[10px] lg:flex lg:items-center lg:justify-between lg:px-[50px]">
+          <div class="flex items-center">
+            <div class="logo hidden lg:block mr-8">
+              <img src="./assets/img/header/logo.svg" alt="Logo" />
+            </div>
+            <ul class="flex">
+              <li>
+                <a href="index.html" class="text-secondary hover:text-accent transition-all duration-300 mr-6">Beranda</a>
+              </li>
+              <li>
+                <a href="definisi.html" class="text-secondary hover:text-accent transition-all duration-300 mr-6">Definisi</a>
+              </li>
+              <li>
+                <a href="eksplor.html" class="text-secondary hover:text-accent transition-all duration-300 mr-6">Eksplor</a>
+              </li>
+              <li>
+                <a href="tentang.html" class="text-secondary hover:text-accent transition-all duration-300 mr-6">Tentang</a>
+              </li>
+              <li>
+                <a href="kontak.html" class="text-secondary hover:text-accent transition-all duration-300 mr-6">Kontak</a>
+              </li>
+            </ul>
+          </div>
           <!-- Search -->
           <div class="flex items-center">
-            <input type="text" id="searchInput" placeholder="Cari Kata" class="bg-grey text-secondary placeholder-secondary rounded-[5px] px-2 py-1 focus:outline-none" />
-            <i class="ri-search-line text-secondary ml-2 hover:text-accent transition-all duration-300" onclick="searchAndHighlight()"></i>
-          </div>
-          <div class="navigation-buttons">
-            <button onclick="navigateHighlights(-1)">Previous</button>
-            <button onclick="navigateHighlights(1)">Next</button>
+            <div class="relative">
+              <input type="text" id="searchInput" placeholder="Cari Kata" class="bg-grey text-secondary placeholder-secondary rounded-[5px] px-2 py-1 focus:outline-none pr-8" />
+              <button id="clearSearch" class="absolute right-2 top-1/2 transform -translate-y-1/2 text-secondary hover:text-accent transition-all duration-300 hidden">&times;</button>
+            </div>
+            <i id="searchIcon" class="ri-search-line text-secondary ml-2 hover:text-accent transition-all duration-300 cursor-pointer"></i>
+            <div id="searchNavigation" class="hidden ml-2">
+              <button id="prevButton" class="text-secondary hover:text-accent">&uarr;</button>
+              <button id="nextButton" class="text-secondary hover:text-accent">&darr;</button>
+            </div>
           </div>
         </nav>
       </div>
     </header>
     <!-- End Header -->
 
-<!-- Hero -->
-<section class="relative flex mt-8 items-center justify-center h-40 lg:h-[300px] bg-cover bg-tentang">
-  <!-- Overlay Shadow -->
-  <div class="absolute inset-0 bg-black opacity-80"></div>
-  <div class="relative text-center text-white">
-    <h1 class="text-4xl md:text-6xl text-white font-bold tracking-widest">KONTAK</h1>
-    <p class="font-light">Kontak Kami</p>
-  </div>
-</section>
-<!-- End Hero -->
+    <!-- Hero -->
+    <section class="relative flex mt-8 items-center justify-center h-40 lg:h-[400px] bg-cover bg-hero">
+      <!-- Overlay Shadow -->
+      <div class="absolute inset-0 bg-black opacity-80"></div>
+      <div class="relative text-center text-white">
+        <h1 class="text-4xl lg:text-6xl text-white font-bold tracking-widest">KONTAK</h1>
+        <p class="font-light">Kontak Kami</p>
+      </div>
+    </section>
+    <!-- End Hero -->
 
-<!-- Kontak -->
-<section class="flex min-h-screen mt-12 mb-20">
-    <!-- Form -->
-    <div class="flex-1 bg-white shadow-lg rounded-lg p-8 m-4">
+    <!-- Kontak -->
+    <section class="flex items-center justify-center min-h-screen mt-12 mb-20">
+      <!-- Form -->
+      <div class="bg-white shadow-lg rounded-lg p-8 max-w-md w-60">
         <h1 class="text-4xl font-bold mb-6">Hubungi Kami</h1>
         <p class="mb-6">Hubungi kami untuk pertanyaan atau dukungan. Kami siap membantu Anda kapan saja.</p>
         <a href="https://github.com/" target="_blank" class="flex items-center w-max gap-x-2 mb-2 text-accent hover:text-accent-secondary">
           <i class="ri-whatsapp-line"></i>
           <p class="font-light">WhatsApp</p>
         </a>
-        <a href="https://github.com/" target="_blank" class="flex items-center w-max gap-x-2 mb-6 text-accent hover:text-accent-secondary">
+        <a href="https://github.com/jenioden1/iconiccc" target="_blank" class="flex items-center w-max gap-x-2 mb-6 text-accent hover:text-accent-secondary">
           <i class="ri-github-fill"></i>
           <p class="font-light">Github</p>
         </a>
         <form action="#" method="POST">
-            <div class="mb-4">
-                <label for="nama" class="block text-lg font-medium text-black">Nama Lengkap <span class="text-accent">*</span></label>
-                <input type="text" id="nama" name="nama" class="mt-1 block w-full px-3 py-2 border border-accent rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-accent-secondary" required>
-            </div>
-            <div class="mb-4">
-                <label for="email" class="block text-lg font-medium text-black">Email <span class="text-accent">*</span></label>
-                <input type="email" id="email" name="email" class="mt-1 block w-full px-3 py-2 border border-accent rounded-md shadowlg focus:outline-none focus:ring-2 focus:ring-accent-secondary" required>
-            </div>
-            <div class="mb-4">
-                <label for="pesan" class="block text-lg font-medium text-black">Pesan <span class="text-accent">*</span></label>
-                <textarea id="pesan" name="pesan" rows="4" class="mt-1 block w-full px-3 py-2 border border-accent rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-accent-secondary" required></textarea>
-            </div>
-            <button type="submit" class="w-full bg-accent hover:bg-accent-secondary text-white font-bold py-2 px-4 rounded-lg">Kirim</button>
+          <div class="mb-4">
+            <label for="nama" class="block text-lg font-medium text-black">Nama Lengkap <span class="text-accent">*</span></label>
+            <input type="text" id="nama" name="nama" class="mt-1 block w-full px-3 py-2 border border-accent rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-accent-secondary" required />
+          </div>
+          <div class="mb-4">
+            <label for="email" class="block text-lg font-medium text-black">Email <span class="text-accent">*</span></label>
+            <input type="email" id="email" name="email" class="mt-1 block w-full px-3 py-2 border border-accent rounded-md shadow-lg focus:outline-none focus:ring-2 focus:ring-accent-secondary" required />
+          </div>
+          <div class="mb-4">
+            <label for="pesan" class="block text-lg font-medium text-black">Pesan <span class="text-accent">*</span></label>
+            <textarea id="pesan" name="pesan" rows="4" class="mt-1 block w-full px-3 py-2 border border-accent rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-accent-secondary" required></textarea>
+          </div>
+          <button type="submit" class="w-full bg-accent hover:bg-accent-secondary text-white font-bold py-2 px-4 rounded-lg">Kirim</button>
         </form>
-    </div>
+      </div>
+    </section>
+    <!-- End Kontak -->
 
-    <!-- Map -->
-    <div class="flex-1 bg-gray-200 m-4">
-        <div id="map" class="h-full"></div>
-    </div>
-</section>
-
-<!-- Footer -->
-<footer class="bg-white">
+    <!-- Footer -->
+    <footer class="bg-white">
       <div class="container mx-auto mt-4 px-6 py-8">
         <div class="flex flex-col md:flex-row space-y-8 md:space-y-0 md:space-x-10">
           <!-- Logo dan Deskripsi -->
-          <div class="lg:w-1/4 md:w-1/2">
+          <div class="lg:w-1/5 md:w-1/2">
             <h1 class="text-xl md:text-3xl font-bold mb-4"><span class="text-accent">EDUHEALTH</span></h1>
             <p class="mt-2 text-md mb-6">Website tentang anatomi tubuh manusia. Untuk mengikuti lomba ICONIC IT 2024 diselenggarakan oleh Informatika UNSIL.</p>
-            <div class="flex space-x-4 mb-6">
-              <a href="https://github.com/" target="_blank"><img src="assets/icons/footer/gh.png" alt="GitHub Logo" class="h-10" /></a>
-              <a href="https://github.com/" target="_blank"><img src="assets/icons/footer/wa.png" alt="WhatsApp Logo" class="h-10" /></a>
+            <div class="flex space-x-6 mb-6">
+              <a href="https://github.com/" target="_blank" class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
+                <i class="ri-whatsapp-line text-2xl lg:text-4xl"></i>
+              </a>
+              <a href="https://github.com/jenioden1/iconiccc" target="_blank" class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
+                <i class="ri-github-fill text-2xl lg:text-4xl"></i>
+              </a>
             </div>
           </div>
 
           <!-- Menu Eduhealth -->
-          <div class="lg:w-1/4 md:w-1/2 w-full">
+          <div class="lg:w-1/5 md:w-1/2 w-full">
             <h2 class="text-lg font-bold mb-6">Menu Eduhealth</h2>
             <nav class="list-none space-y-6">
               <li><a href="index.html" class="hover:text-accent">Beranda</a></li>
-              <li><a href="index.html" class="hover:text-accent">Definisi</a></li>
-              <li><a href="index.html" class="hover:text-accent">Eksplor</a></li>
-              <li><a href="index.html" class="hover:text-accent">Tentang</a></li>
-              <li><a href="index.html" class="hover:text-accent">Kontak</a></li>
+              <li><a href="definisi.html" class="hover:text-accent">Definisi</a></li>
+              <li><a href="eksplor.html" class="hover:text-accent">Eksplor</a></li>
+              <li><a href="tentang.html" class="hover:text-accent">Tentang</a></li>
+              <li><a href="kontak.html" class="hover:text-accent">Kontak</a></li>
             </nav>
           </div>
 
           <!-- Kategori -->
-          <div class="lg:w-1/4 md:w-1/2 w-full">
+          <!-- Kategori -->
+          <div class="lg:w-1/3 md:w-1/2 w-full">
             <h2 class="text-lg font-bold mb-6">Kategori</h2>
-            <nav class="list-none space-y-6">
-              <li><a href="anatomi.html" class="hover:text-accent">Sistem Pernapasan</a></li>
-              <li><a href="anatomi.html" class="hover:text-accent">Sistem Pencernaan</a></li>
-              <li><a href="anatomi.html" class="hover:text-accent">Sistem Ekskresi</a></li>
-              <li><a href="anatomi.html" class="hover:text-accent">Sistem Reproduksi</a></li>
-              <li><a href="anatomi.html" class="hover:text-accent">Sistem Saraf</a></li>
-            </nav>
+            <div class="grid grid-cols-2 gap-4">
+              <nav class="list-none space-y-6">
+                <li><a href="definisi.html" class="hover:text-accent">Sistem Pernapasan</a></li>
+                <li><a href="definisi.html" class="hover:text-accent">Sistem Pencernaan</a></li>
+                <li><a href="definisi.html" class="hover:text-accent">Sistem Ekskresi</a></li>
+                <li><a href="definisi.html" class="hover:text-accent">Sistem Reproduksi</a></li>
+                <li><a href="definisi.html" class="hover:text-accent">Sistem Saraf</a></li>
+                <li><a href="definisi.html" class="hover:text-accent">Sistem Endokrin</a></li>
+              </nav>
+              <nav class="list-none space-y-6">
+                <li><a href="definisi.html" class="hover:text-accent">Sistem Limfatik</a></li>
+                <li><a href="definisi.html" class="hover:text-accent">Sistem Integumen</a></li>
+                <li><a href="definisi.html" class="hover:text-accent">Sistem Imun</a></li>
+                <li><a href="definisi.html" class="hover:text-accent">Sistem Muskuloskeletal</a></li>
+                <li><a href="definisi.html" class="hover:text-accent">Sistem Peredaran Darah</a></li>
+              </nav>
+            </div>
           </div>
 
           <!-- Hubungi Kami -->
@@ -241,8 +242,8 @@
         <!-- Copyright -->
         <p class="mt-12 lg:text-center">&copy;2024 EduHealth, Inc. All rights reserved.</p>
       </div>
-</footer>
-<!-- End Footer -->
+    </footer>
+    <!-- End Footer -->
 
     <script src="js/main.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
