--- a/kontak.html
+++ b/kontak.html
@@ -145,7 +145,7 @@
     <!-- Kontak -->
     <section class="flex items-center justify-center min-h-screen mt-12 mb-20">
       <!-- Form -->
-      <div class="bg-white shadow-lg rounded-lg p-8 max-w-md w-60">
+      <div class="bg-white shadow-lg rounded-lg p-8 max-w-[800px]">
         <h1 class="text-4xl font-bold mb-6">Hubungi Kami</h1>
         <p class="mb-6">Hubungi kami untuk pertanyaan atau dukungan. Kami siap membantu Anda kapan saja.</p>
         <a href="https://github.com/" target="_blank" class="flex items-center w-max gap-x-2 mb-2 text-accent hover:text-accent-secondary">
@@ -171,6 +171,8 @@
           </div>
           <button type="submit" class="w-full bg-accent hover:bg-accent-secondary text-white font-bold py-2 px-4 rounded-lg">Kirim</button>
         </form>
+        <p class="font-bold text-lg text-black mt-12 mb-4">Terima kasih telah menghubungi kami!</p>
+        <p>Pesan Anda telah kami terima. Tim kami akan segera menghubungi Anda untuk memberikan respon secepat mungkin. Dukungan Anda sangat berarti bagi kami, dan kami siap membantu Anda dengan kebutuhan atau pertanyaan apapun.</p>
       </div>
     </section>
     <!-- End Kontak -->
