--- a/eksplor.html
+++ b/eksplor.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -137,157 +136,63 @@
       <!-- Overlay Shadow -->
       <div class="absolute inset-0 bg-black opacity-80"></div>
       <div class="relative text-center text-white">
-        <h1 class="text-4xl md:text-6xl text-white font-bold tracking-widest">DEFINISI</h1>
-        <p class="font-light">Mengenal Anatomi Tubuh Manusia</p>
+        <h1 class="text-4xl lg:text-6xl text-white font-bold tracking-widest">EKSPLOR</h1>
+        <p class="font-light">Eksplorasi Anatomi Tubuh Manusia</p>
       </div>
     </section>
     <!-- End Hero -->
 
-    <!-- Definisi -->
-    <section class="container mx-auto mt-8 mb-[80px] px-1">
-      <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-        <!-- Sidebar -->
-        <aside class="md:col-span-1 bg-white p-4 shadow-lg rounded-lg">
-          <div>
-            <label for="sistem-organ" class="block font-semibold">Sistem Organ</label>
-            <select id="sistem-organ" class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-accent-secondary">
-              <option value="">Pilih Sistem Organ</option>
-              <option value="sistem-saraf">Sistem Saraf</option>
-              <option value="sistem-endokrin">Sistem Endokrin</option>
-              <option value="sistem-pencernaan">Sistem Pencernaan</option>
-              <option value="sistem-pernapasan">Sistem Pernapasan</option>
-              <option value="sistem-peredaran-darah">Sistem Peredaran Darah</option>
-              <option value="sistem-limfatik">Sistem Limfatik</option>
-              <option value="sistem-muskuloskeletal">Sistem Muskuloskeletal</option>
-              <option value="sistem-integumen">Sistem Integumen</option>
-              <option value="sistem-ekskresi">Sistem Ekskresi</option>
-              <option value="sistem-reproduksi">Sistem Reproduksi</option>
-              <option value="sistem-imun">Sistem Imun</option>
-            </select>
-          </div>
+    <!-- Eksplorasi -->
+    <div class="text-center mt-12">
+      <p class="text-xl font-bold text-accent-secondary mb-4">Visualisasi Realistis</p>
+      <p class="text-xl lg:text-4xl text-black font-bold mb-2">Jelajahi Anatomi Dengan Kualitas 3D</p>
+      <p class="text-secondary">Detail yang akurat, setiap bagian tubuh ditampilkan dengan jelas untuk memberikan pengalaman belajar yang mendalam.</p>
+    </div>
 
-          <div class="mt-4">
-            <label for="nama-organ" class="block font-semibold">Nama Organ</label>
-            <select id="nama-organ" class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-accent">
-              <option value="">Pilih Nama Organ</option>
-              <!-- Nama Organ dari Sistem Saraf -->
-              <option class="sistem-saraf hidden" value="otak">Otak</option>
-              <option class="sistem-saraf hidden" value="sumsum-tulang-belakang">Sumsum Tulang Belakang</option>
-              <option class="sistem-saraf hidden" value="saraf-perifer">Saraf Perifer</option>
-              <option class="sistem-saraf hidden" value="otonom">Otonom</option>
-              <option class="sistem-saraf hidden" value="neuron">Neuron</option>
-
-              <!-- Nama Organ dari Sistem Endokrin -->
-              <option class="sistem-endokrin hidden" value="kelenjar-hipofisis">Kelenjar Hipofisis</option>
-              <option class="sistem-endokrin hidden" value="kelenjar-tiroid">Kelenjar Tiroid</option>
-              <option class="sistem-endokrin hidden" value="kelenjar-paratiroid">Kelenjar Paratiroid</option>
-              <option class="sistem-endokrin hidden" value="kelenjar-adrenal">Kelenjar Adrenal</option>
-              <option class="sistem-endokrin hidden" value="pankreas-pencernaan">Pankreas</option>
-              <option class="sistem-endokrin hidden" value="gonad">Gonad (Testis atau Ovarium)</option>
-              <option class="sistem-endokrin hidden" value="kelenjar-pineal">Kelenjar Pineal</option>
-              <option class="sistem-endokrin hidden" value="kelenjar-timus">Kelenjar Timus</option>
-
-              <!-- Nama Organ dari Sistem Pencernaan -->
-              <option class="sistem-pencernaan hidden" value="mulut">Mulut</option>
-              <option class="sistem-pencernaan hidden" value="kerongkongan">Kerongkongan</option>
-              <option class="sistem-pencernaan hidden" value="lambung">Lambung</option>
-              <option class="sistem-pencernaan hidden" value="usus-halus">Usus Halus</option>
-              <option class="sistem-pencernaan hidden" value="usus-besar">Usus Besar</option>
-              <option class="sistem-pencernaan hidden" value="hati">Hati</option>
-              <option class="sistem-pencernaan hidden" value="pankreas-pencernaan">Pankreas</option>
-              <option class="sistem-pencernaan hidden" value="kantong-empedu">Kantong Empedu</option>
-              <option class="sistem-pencernaan hidden" value="rektum">Rektum</option>
-              <option class="sistem-pencernaan hidden" value="anus">Anus</option>
-
-              <!-- Nama Organ dari Sistem Pernapasan -->
-              <option class="sistem-pernapasan hidden" value="hidung">Hidung</option>
-              <option class="sistem-pernapasan hidden" value="faring">Faring</option>
-              <option class="sistem-pernapasan hidden" value="laring">Laring</option>
-              <option class="sistem-pernapasan hidden" value="trakea">Trakea</option>
-              <option class="sistem-pernapasan hidden" value="bronkus">Bronkus</option>
-              <option class="sistem-pernapasan hidden" value="paru-paru">Paru-paru</option>
-              <option class="sistem-pernapasan hidden" value="diafragma">Diafragma</option>
-
-              <!-- Nama Organ dari Sistem Peredaran Darah -->
-              <option class="sistem-peredaran-darah hidden" value="jantung">Jantung</option>
-              <option class="sistem-peredaran-darah hidden" value="arteri">Arteri</option>
-              <option class="sistem-peredaran-darah hidden" value="vena">Vena</option>
-              <option class="sistem-peredaran-darah hidden" value="kapiler">Kapiler</option>
-
-              <!-- Nama Organ dari Sistem Limfatik -->
-              <option class="sistem-limfatik hidden" value="kelenjar-getah-bening">Kelenjar Getah Bening</option>
-              <option class="sistem-limfatik hidden" value="limpa">Limpa</option>
-              <option class="sistem-limfatik hidden" value="pembuluh-limfatik">Pembuluh Limfatik</option>
-              <option class="sistem-limfatik hidden" value="tonsil">Tonsil</option>
-              <option class="sistem-limfatik hidden" value="adenoid">Adenoid</option>
-              <option class="sistem-limfatik hidden" value="timos">Timos</option>
-              <option class="sistem-limfatik hidden" value="sumsum-tulang-limfatik">Sumsum Tulang</option>
-
-              <!-- Nama Organ dari Sistem Muskuloskeletal -->
-              <option class="sistem-muskuloskeletal hidden" value="tulang">Tulang</option>
-              <option class="sistem-muskuloskeletal hidden" value="otot">Otot</option>
-              <option class="sistem-muskuloskeletal hidden" value="sendi">Sendi</option>
-              <option class="sistem-muskuloskeletal hidden" value="tendon">Tendon</option>
-              <option class="sistem-muskuloskeletal hidden" value="ligamen">Ligamen</option>
-
-              <!-- Nama Organ dari Sistem Integumen -->
-              <option class="sistem-integumen hidden" value="kulit">Kulit</option>
-              <option class="sistem-integumen hidden" value="rambut">Rambut</option>
-              <option class="sistem-integumen hidden" value="kuku">Kuku</option>
-              <option class="sistem-integumen hidden" value="kelenjar-keringat">Kelenjar Keringat</option>
-              <option class="sistem-integumen hidden" value="kelenjar-minyak">Kelenjar Minyak</option>
-
-              <!-- Nama Organ dari Sistem Ekskresi -->
-              <option class="sistem-ekskresi hidden" value="ginjal">Ginjal</option>
-              <option class="sistem-ekskresi hidden" value="ureter">Ureter</option>
-              <option class="sistem-ekskresi hidden" value="kandung-kemih">Kandung Kemih</option>
-              <option class="sistem-ekskresi hidden" value="uretra">Uretra</option>
-
-              <!-- Nama Organ dari Sistem Reproduksi -->
-              <option class="sistem-reproduksi hidden" value="testis">Testis</option>
-              <option class="sistem-reproduksi hidden" value="penis">Penis</option>
-              <option class="sistem-reproduksi hidden" value="vesikula-seminalis">Vesikula Seminalis</option>
-              <option class="sistem-reproduksi hidden" value="prostat">Prostat</option>
-              <option class="sistem-reproduksi hidden" value="vas-deferens">Vas Deferens</option>
-              <option class="sistem-reproduksi hidden" value="ovarium">Ovarium</option>
-              <option class="sistem-reproduksi hidden" value="tuba-falopi">Tuba Falopi</option>
-              <option class="sistem-reproduksi hidden" value="uterus">Uterus</option>
-              <option class="sistem-reproduksi hidden" value="vagina">Vagina</option>
-
-              <!-- Nama Organ dari Sistem Imun -->
-              <option class="sistem-imun hidden" value="kelenjar-getah-bening-imun">Kelenjar Getah Bening</option>
-              <option class="sistem-imun hidden" value="limpa-imun">Limpa</option>
-              <option class="sistem-imun hidden" value="tonsil-imun">Tonsil</option>
-              <option class="sistem-imun hidden" value="timos-imun">Timos</option>
-              <option class="sistem-imun hidden" value="sumsum-tulang-imun">Sumsum Tulang</option>
-              <option class="sistem-imun hidden" value="sel-darah-putih">Sel Darah Putih</option>
-            </select>
-          </div>
-
-          <div class="mt-4">
-            <button id="cari-sekarang" class="w-full bg-accent text-white font-semibold py-2 px-4 rounded-lg hover:bg-accent-secondary focus:outline-none focus:ring-2 focus:ring-accent-secondary">Cari Sekarang</button>
-          </div>
-        </aside>
-
-        <!-- Deskripsi -->
-        <div class="md:col-span-3 bg-gray-100 p-6 shadow-lg rounded-lg flex items-start">
-          <img src="" alt="" id="gambar-penunjang" class="rounded-[20px] w-[300px] h-[300px] object-cover mr-6 hidden border-2 border-gray-300" />
-          <p id="deskripsi-penjelasan" class="text-gray-500">Pilih sistem organ dan nama organ untuk melihat penjelasan.</p>
+    <!-- Card -->
+    <div class="flex flex-wrap justify-center space-x-4">
+      <!-- Card 1 -->
+      <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+        <img class="w-full" src="assets/img/spesial/otak.png" alt="otak" />
+        <div class="p-4">
+          <p class="font-bold text-center text-accent-secondary text-xl mb-2">Otak</p>
         </div>
       </div>
-    </section>
-    <!-- End Definisi -->
 
-    <!-- Banner -->
-    <section class="container mx-auto py-16 flex flex-col lg:flex-row items-center bg-cover bg-center text-white rounded-lg bg-hero">
-      <!-- Text Content -->
-      <div class="lg:w-1/2 p-6 bg-opacity-50 rounded-lg">
-        <h2 class="text-4xl font-bold mb-4 text-white">Masih bingung belajar tentang anatomi?</h2>
-        <p class="text-lg mb-6">Tenang, kami mempunyai fitur rekomendasi yang membantu kamu lebih memahami anatomi tubuh manusia yang tepat dengan menjawab pertanyaan yang kami berikan.</p>
-        <a href="kontak.html" class="inline-block bg-white text-black font-semibold py-3 px-6 rounded-lg hover:bg-gray-200 transition"> Gabung &rarr; </a>
+      <!-- Card 2 -->
+      <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+        <img class="w-full" src="assets/img/spesial/jantung.png" alt="jantung" />
+        <div class="p-4">
+          <p class="font-bold text-center text-accent-secondary text-xl mb-2">Jantung</p>
+        </div>
       </div>
-    </section>
-    <!-- End Banner -->
+
+      <!-- Card 3 -->
+      <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+        <img class="w-full" src="assets/img/spesial/paru.png" alt="paru-paru" />
+        <div class="p-4">
+          <p class="font-bold text-center text-accent-secondary text-xl mb-2">Paru - Paru</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="flex justify-center space-x-4 mt-16">
+      <!-- Card 4 -->
+      <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+        <img class="w-full" src="assets/img/spesial/liver.png" alt="hati-liver" />
+        <div class="p-4">
+          <h2 class="font-bold text-center text-accent-secondary text-xl mb-2">Hati / Liver</h2>
+        </div>
+      </div>
+
+      <!-- Card 5 -->
+      <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+        <img class="w-full" src="assets/img/spesial/ginjal.png" alt="ginjal" />
+        <div class="p-4">
+          <h2 class="font-bold text-center text-accent-secondary text-xl mb-2">Ginjal</h2>
+        </div>
+      </div>
+    </div>
 
     <!-- Footer -->
     <footer class="bg-white">
@@ -319,6 +224,7 @@
             </nav>
           </div>
 
+          <!-- Kategori -->
           <!-- Kategori -->
           <div class="lg:w-1/3 md:w-1/2 w-full">
             <h2 class="text-lg font-bold mb-6">Kategori</h2>
@@ -361,7 +267,5 @@
     <script src="js/main.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/scrollreveal.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
   </body>
 </html>
