--- a/eksplor.html
+++ b/eksplor.html
@@ -150,48 +150,58 @@
     </div>
 
     <!-- Card -->
-    <div class="flex flex-wrap justify-center space-x-4">
+    <div class="flex flex-wrap justify-center space-x-4 mt-20">
       <!-- Card 1 -->
-      <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
-        <img class="w-full" src="assets/img/spesial/otak.png" alt="otak" />
-        <div class="p-4">
-          <p class="font-bold text-center text-accent-secondary text-xl mb-2">Otak</p>
+      <a href="">
+        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+          <img class="w-full" src="assets/img/spesial/otak.png" alt="otak" />
+          <div class="p-4">
+            <p class="font-bold text-center text-accent-secondary text-xl mb-2">Otak</p>
+          </div>
         </div>
-      </div>
+      </a>
 
       <!-- Card 2 -->
-      <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
-        <img class="w-full" src="assets/img/spesial/jantung.png" alt="jantung" />
-        <div class="p-4">
-          <p class="font-bold text-center text-accent-secondary text-xl mb-2">Jantung</p>
+      <a href="">
+        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+          <img class="w-full" src="assets/img/spesial/jantung.png" alt="jantung" />
+          <div class="p-4">
+            <p class="font-bold text-center text-accent-secondary text-xl mb-2">Jantung</p>
+          </div>
         </div>
-      </div>
+      </a>
 
       <!-- Card 3 -->
-      <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
-        <img class="w-full" src="assets/img/spesial/paru.png" alt="paru-paru" />
-        <div class="p-4">
-          <p class="font-bold text-center text-accent-secondary text-xl mb-2">Paru - Paru</p>
+      <a href="">
+        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+          <img class="w-full" src="assets/img/spesial/paru.png" alt="paru-paru" />
+          <div class="p-4">
+            <p class="font-bold text-center text-accent-secondary text-xl mb-2">Paru - Paru</p>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
 
     <div class="flex justify-center space-x-4 mt-16">
       <!-- Card 4 -->
-      <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
-        <img class="w-full" src="assets/img/spesial/liver.png" alt="hati-liver" />
-        <div class="p-4">
-          <h2 class="font-bold text-center text-accent-secondary text-xl mb-2">Hati / Liver</h2>
+      <a href="">
+        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+          <img class="w-full" src="assets/img/spesial/liver.png" alt="hati-liver" />
+          <div class="p-4">
+            <h2 class="font-bold text-center text-accent-secondary text-xl mb-2">Hati / Liver</h2>
+          </div>
         </div>
-      </div>
+      </a>
 
       <!-- Card 5 -->
-      <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
-        <img class="w-full" src="assets/img/spesial/ginjal.png" alt="ginjal" />
-        <div class="p-4">
-          <h2 class="font-bold text-center text-accent-secondary text-xl mb-2">Ginjal</h2>
+      <a href="">
+        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+          <img class="w-full" src="assets/img/spesial/ginjal.png" alt="ginjal" />
+          <div class="p-4">
+            <h2 class="font-bold text-center text-accent-secondary text-xl mb-2">Ginjal</h2>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
 
     <!-- Footer -->
